[CORE-1473] Addressing SonarQube issues - fixing java:S6204