@@ -20,7 +20,6 @@ import org.apache.jena.sparql.core.DatasetGraph;
 import org.apache.jena.sparql.core.Quad;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -41,6 +40,6 @@ public class LiteralPropertiesFetcher
     protected List<LiteralProperty> map(DataFetchingEnvironment environment, DatasetGraph dsg, TelicentGraphNode node,
                                         Stream<Quad> input) {
         return input.map(q -> new LiteralProperty(q.getPredicate(), q.getObject(), dsg.prefixes()))
-                    .collect(Collectors.toList());
+                    .toList();
     }
 }
